@@ -320,10 +320,15 @@ public class FSSalesReceipt extends CustomReceipt implements FiscalReceipt {
                     }
                     getPrinter().waitForPrinting();
                     getDevice().cancelReceipt();
-                    String docName = getDevice().getReceiptName(receiptType);
-                    getDevice().printReceiptHeader(docName);
-                    getPrinter().printText(voidDescription);
-                    getPrinter().printText(getParams().receiptVoidText);
+                    getPrinter().waitForPrinting();
+                    
+                    if (getParams().printVoidedReceipt)
+                    {
+                        String docName = getDevice().getReceiptName(receiptType);
+                        getDevice().printReceiptHeader(docName);
+                        getPrinter().printText(voidDescription);
+                        getPrinter().printText(getParams().receiptVoidText);
+                    }
                 } catch (Exception e) {
                     logger.error("Cancel receipt: " + e.getMessage());
                 }
