@@ -4,6 +4,14 @@
   Project : SHTRIH-M JavaPOS fiscal printer driver
   Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
   Url     : https://github.com/shtrih-m/javapos_shtrih
+
+********************************************************************************
+
+  November, 2 2017
+  deviceServiceVersion = 1013477
+	
+  [-] Fixed error with printing voided receipts,
+      added parameter printVoidedReceipt, default value is false  
   
 ********************************************************************************
 
